src/components/data-table/index.css
.data-table,
.data-table-filters-wrapper {
    border: 0;
    border-collapse: collapse;
    max-width: 1200px;
    margin: 0 auto;
    width: 100%;
}

.data-table-filters-wrapper {
    display: flex;
    justify-content: center;
    margin: 20px auto;
    width: 100%;
}

.data-table thead,
.data-table tfoot {
    background: rgb(from var(--color-black) r g b / 0.4);
    position: sticky;
    top: 0;
}

.data-table thead {
    z-index: 1;
}

.data-table tbody tr {
    height: 69px;
}

.data-table thead tr:first-child {
    border-top: 4px solid var(--color-black-light);
}

.data-table tbody tr.last-row {
    height: 1px;
}

.data-table th {
    padding: 10px 5px 10px;
}

th:first-child,
td.data-cell:first-child {
    border-left: 4px solid var(--color-black-light);
}

th:last-child,
td.data-cell:last-child {
    border-right: 4px solid var(--color-black-light);
}

.data-cell,
.data-table tfoot th {
    padding: 5px 15px;
    border-top: 4px solid var(--color-black-light);
    border-bottom: 4px solid var(--color-black-light);
}

.data-table .center-content {
    text-align: center;
}

.data-table .nowrap-content {
    white-space: nowrap;
}

.data-table .table-image {
    max-width: 64px;
    max-height: 64px;
}

.data-table .table-image + span {
    margin-left: 10px;
}

.data-table tr td {
    background-color: var(--color-gunmetal-dark);
}

.data-table tbody tr.expanded td {
    background-color: var(--color-gunmetal-dark);
}

.header-sort-icon__icon {
    fill: var(--color-gold-one);
    height: 10px;
    width: 10px;
    transition:
        transform 0.2s ease-in-out,
        opacity 0.2s ease-in-out;
}

.header-sort-icon__icon.header-sort-icon__icon--up {
    transform: rotate(180deg);
}

.header-sort-icon__icon.header-sort-icon__icon--right {
    transform: rotate(-90deg);
}

.header-sort-icon__icon.header-sort-icon__icon--down {
    transform: rotate(0deg);
}

.header-sort-icon__icon.header-sort-icon__icon--visible {
    opacity: 1;
}

.header-sort-icon__icon.header-sort-icon__icon--hidden {
    opacity: 0;
}

.data-table .header-sort-icon-container {
    height: 10px;
    transition: height 0.2s ease-in-out;
}

.data-table .header-sort-icon-container--h-0 {
    height: 0px;
}

.data-table .header-sort-icon-container--ml-6 {
    margin-left: 6px;
}

.data-table .header-sort-icon-container--block {
    display: block;
}

div.no-data-info {
    display: flex;
    justify-content: center;
}

.table-wrapper {
    max-width: 100%;
    overflow-x: scroll;
}

.cost-wrapper {
    padding: 5px 0;
}

.table-extra-row {
    text-align: center;
}

.data-table {
    .table-head--left {
        text-align: left;
        padding-left: 15px;
    }

    .table-head--right {
        text-align: right;
    }
}

@media screen and (width >= 800px) {
    .table-wrapper {
        overflow-x: initial;
    }
}

